[package]
name = "mpecdsa"
version = "0.3.1"
edition = "2018"


[profile.release]
lto = true

[profile.test]
opt-level = 3

[lib]
crate-type = ["lib"]
name = "mpecdsa"

[features]
default = ["curv-kzen/num-bigint"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
time="*"
curv-kzen = { version = "0.9", default-features = false }
p256 = { version = "0.10.1", features = ["ecdsa"] }
hex = "0.4"

[dependencies.multi-party-ecdsa]
git = "https://github.com/jirigav/multi-party-ecdsa"
branch= "p256"
default-features = false
version = "0.8.0"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
