[package]
name = "mpecdsa"
version = "0.3.2"
edition = "2018"


[profile.release]
lto = true

[profile.test]
opt-level = 3

[lib]
crate-type = ["lib"]
name = "mpecdsa"

[features]
default = ["curv-kzen/num-bigint"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
time="*"
curv-kzen = { git = "https://github.com/jirigav/curv", version = "0.10", default-features = false }
p256 = { version = "0.11", features = ["ecdsa"] }
hex = "0.4"
zk-paillier = { git = "https://github.com/jirigav/zk-paillier", version = "0.4.4", default-features = false }

[dependencies.multi-party-ecdsa]
git = "https://github.com/jirigav/multi-party-ecdsa"
branch = "p256"
default-features = false
version = "0.8.1"

[dependencies.paillier]
git = "https://github.com/jirigav/rust-paillier"
version = "0.4.3"
package = "kzen-paillier"
default-features = false
